# label_analysis

./: .gitignore  .~lock.bins.csv#  .~lock.cc.csv#  .~lock.hoods.csv#  .~lock.normal_lesions.csv#  .~lock.results.csv#  cc.df  crc_CRC004_20190425_CAP1p5_benign.json  helpers.py  mergemasks.py  pyproject.toml  radiomics_analysis.py  req_slicer.txt  requirements.txt  setup.py  test.csv  tmp.json  tmpdf.csv
.githooks/: pre-commit
configs/: params.yaml
label_analysis/: AGENTS.md  LOCAL_AGENT_NOTES.md  Table_3.tsv  __init__.py  ai_screening.py  common.py  dataset_stats.py  fillholes.py  fillholes_worker.py  geometry.py  geometry_itk.py  geometry_itk_bkp.py  geometry_pt.py  helpers.py  kde.py  labels.py  lm_merge.py  lm_overlap.py  markups.py  merge.py  mesh.py  mesh_icp.py  multiproc.py  multiproc_pt.py  nonrigid.py  overlap.py  plots.py  radiomics.py  radiomics_setup.py  registration.py  registration_callbacks.py  remap.py  rough.py  snippets.py  totalseg.py  utils.py  visualizaton.py
label_analysis/cpp/: CMakeLists.txt  CmakePresets.json  compile_commands.json  printmod.cpp
label_analysis/cpp/.cache/clangd/index/: printmod.cpp.4C1542AE3CBBB714.idx
label_analysis/cpp/build_slicer/: CMakeCache.txt
label_analysis/cpp/slicer/: CMakeLists.txt
label_analysis/cpp/slicer/build_slicer/: CMakeCache.txt
label_analysis/markup/: boundingbox.py  core.py  from_lm.py  roibox.py
label_analysis/markup_templates/: auto.json  controlpoint.json  detection.json  empty.json
label_analysis/rstats/: analysis_all.R  dataset_stats.R  df.Rda  df_prep.R  normal_cases.R  overlap.R
label_analysis/tests/: test_tsl.py
mask_analysis/: cases.txt  fiducials.py  fiducials_lits.py  helpers.py  labels.py  mergemasks.py  normal_ct_analysis.py  normal_lesions.csv  radiomics_analysis.py  relabellers.py  rough.py
mask_analysis/rstats/: analysis_all.R  plots.R
rstats/: stats.R
testfiles/: 2024-05-18-Scene.mrml  2024-05-20-Scene.mrml  Isodose_ColorTable_DefaultCopy.ctbl  dsc.py.npy  dsc_CRC171.npy  dsc_CRC211.npy  dsc_test.npy  gt.nrrd  pred.nrrd
tests/: test_tsl.py
tests/test1/: desc.md  two_lesions_cc.mrk.json  two_lesions_point.mrk.json
(+3 files in other folders)
